fixed width being too large

--- a/src/app/client/context/context.component.css
+++ b/src/app/client/context/context.component.css
@@ -12,3 +12,7 @@
     background-color: #F2F6FA;
     cursor: pointer;
 }
+
+network {
+  width: calc(100% - 20px);
+}
